--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node-dev ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,16 +18,19 @@
   },
   "homepage": "https://github.com/future4code/julian-cookenu9#readme",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/knex": "^0.16.1",
     "@types/node": "^14.0.23",
     "@types/uuid": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.2",
     "mysql": "^2.18.1",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.51",
     "typescript": "^3.9.6",
     "uuid": "^8.2.0"
   }
